--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,8 @@ input {
 
 .svg-tooltip {
     position: absolute;
-    border-color: #b72dfc;
+    /* border-color: #b72dfc; */
+    border-color: black;
     border-style: solid;
     border-width: 1.5px;
     padding: 3px;
